Add SEO optimisations.

--- a/axa/index.html
+++ b/axa/index.html
@@ -5,6 +5,8 @@ date: 2024-11-22
 summary: "Alignment grid."
 show_on_home: true
 type: "project"
+description: "Build and share custom X alignment grids with avatars or plain text."
+social_image: "/assets/social/axa.png"
 ---
 
 <div class="axa-wrapper">
