--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: dm2k9.net
+description: "A cyber space for Decent Money (@decentmoney2009)."
 ---
 
 {% assign featured_pages = site.pages | where_exp: 'page', 'page.show_on_home == true' | sort: 'date' | reverse %}
