--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: dm2k9.net
-description: "A cyber space for Decent Money (@decentmoney2009)."
+description: "DM2K9 projects, pages, and posts—newest first."
+social_image: "/assets/social/home-v2.png"
 ---
 
 {% assign featured_pages = site.pages | where_exp: 'page', 'page.show_on_home == true' | sort: 'date' | reverse %}
