Update social images to use jpgs.

--- a/axa/index.html
+++ b/axa/index.html
@@ -6,7 +6,7 @@ summary: "Alignment grid."
 show_on_home: true
 type: "project"
 description: "Build and share custom X alignment grids with avatars or plain text."
-social_image: "/assets/social/axa-v2.png"
+social_image: "/assets/social/axa-v2.jpg"
 ---
 
 <div class="axa-wrapper">
