--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: dm2k9.net
 description: "DM2K9 projects, pages, and posts—newest first."
-social_image: "/assets/social/home-v2.png"
+social_image: "/assets/social/home-v2.jpg"
 ---
 
 {% assign featured_pages = site.pages | where_exp: 'page', 'page.show_on_home == true' | sort: 'date' | reverse %}
