--- a/axa/content.html
+++ b/axa/content.html
@@ -520,17 +520,21 @@
 
     <div class="instruction">
       <ul>
-        <li>Click a cell and type: start with <code>@</code> for an <span class="x-symbol">X</span>/Twitter handle with avatar, or leave out <code>@</code> for plain text.</li>
-        <li>Paste an image URL (direct or with query params) and optionally add a label after a <code>|</code> delimiter (e.g. <code>https://example.com/pic.png|Your Label</code>).</li>
-        <li>Screen shot the chart and paste into your <span class="x-symbol">X</span> post.</li>
-        <li>Copy and paste the text at the bottom too to tag people and make AXA post searchable.</li>
+        <li>You can add 3 main types of content to each cell:</li>
+        <ul>
+          <li><strong><span class="x-symbol">X</span> accounts:</strong> Type an <span class="x-symbol">X</span> handle including the @. Displays the avatar (if possible, or a placeholder).</li>
+          <li><strong>Plain text:</strong> Type any text you want to display. Keep it short.</li>
+          <li><strong>Images (+label):</strong> Paste an image URL followed by the pipe character | for an optional text label.</li>
+        </ul>
         <li>Labels for columns and rows also editable if you want to make a custom alignment chart (or click
-          the <b>FMK Labels</b> button above for a quick format change).</li>
-        <li>Sometimes avatars won't load from <a href="https://unavatar.io/">unavatar.io</a> so a placeholder from <a
-            href="https://www.dicebear.com/">dicebear.com</a> will be displayed instead.</li>
+          the <strong>FMK Labels</strong> button above for a quick format change).</li>
+       <li>Screen shot the chart and paste into your <span class="x-symbol">X</span> post.</li>
+        <li>Copy and paste the text at the bottom too to tag people and make AXA post searchable.</li>
       </ul>
+      <p><strong>Note:</strong> Sometimes <span class="x-symbol">X</span> avatars won't load from <a href="https://unavatar.io/">unavatar.io</a> so a placeholder from <a
+          href="https://www.dicebear.com/">dicebear.com</a> will be displayed instead.</p>
     </div>
-
+      
     <div class="controls controls-rowwrap" role="toolbar" aria-label="Chart controls">
       <button id="labelsBtn" class="toggle" aria-pressed="true">Labels: On</button>
       <button id="refreshBtn" class="toggle">
