Update front matter descriptions and social images.

--- a/axa/index.html
+++ b/axa/index.html
@@ -5,8 +5,8 @@ date: 2024-11-22
 summary: "Alignment grid."
 show_on_home: true
 type: "project"
-description: "Build and share custom X alignment grids with avatars or plain text."
-social_image: "/assets/social/axa-v2.jpg"
+description: "Build and share alignment grids."
+social_image: "/assets/social/axa-v3.png"
 ---
 
 <div class="axa-wrapper">
