--- a/axa/content.html
+++ b/axa/content.html
@@ -1066,8 +1066,21 @@
       const text = handlesText.textContent || '';
       copyHandlesBtn.disabled = true;
 
+      const isMobileDevice = /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent || '');
+
+      let pendingWindow = null;
+      if (isMobileDevice) {
+        try {
+          pendingWindow = window.open('', '_blank');
+        } catch (_) {
+          pendingWindow = null;
+        }
+      }
+
       try {
         let imageBlob = null;
+        let copiedImage = false;
+        let copiedText = false;
         try {
           imageBlob = await downloadScreenshot(true);
         } catch (e) {
@@ -1076,14 +1089,31 @@
 
         let copied = false;
 
+        // On mobile, try Web Share API with file + text first
+        if (!copied && isMobileDevice && imageBlob && navigator.canShare && navigator.share) {
+          try {
+            const file = new File([imageBlob], 'axa-grid.png', { type: imageBlob.type || 'image/png' });
+            if (navigator.canShare({ files: [file] })) {
+              await navigator.share({ files: [file], text });
+              copied = true;
+              copiedImage = true;
+              copiedText = !!text;
+            }
+          } catch (err) {
+            console.warn('Web Share failed, trying clipboard', err);
+          }
+        }
+
         // Preferred: single item with both image and text (if supported)
-        if (navigator.clipboard && navigator.clipboard.write && window.ClipboardItem && (imageBlob || text)) {
+        if (!copied && navigator.clipboard && navigator.clipboard.write && window.ClipboardItem && (imageBlob || text)) {
           const payload = {};
           if (imageBlob) payload[imageBlob.type] = imageBlob;
           if (text) payload['text/plain'] = new Blob([text], { type: 'text/plain' });
           try {
             await navigator.clipboard.write([new ClipboardItem(payload)]);
             copied = true;
+            copiedImage = !!imageBlob;
+            copiedText = !!text;
           } catch (err) {
             console.warn('Combined clipboard write failed, trying fallbacks', err);
           }
@@ -1094,6 +1124,7 @@
           try {
             await navigator.clipboard.write([new ClipboardItem({ [imageBlob.type]: imageBlob })]);
             copied = true;
+            copiedImage = true;
           } catch (err) {
             console.warn('Image-only clipboard write failed', err);
           }
@@ -1104,6 +1135,7 @@
           if (navigator.clipboard && navigator.clipboard.writeText) {
             await navigator.clipboard.writeText(text);
             copied = true;
+            copiedText = true;
           } else {
             const temp = document.createElement('textarea');
             temp.value = text;
@@ -1114,6 +1146,7 @@
             document.execCommand('copy');
             document.body.removeChild(temp);
             copied = true;
+            copiedText = true;
           }
         }
 
@@ -1124,7 +1157,11 @@
 
         const startXRedirect = () => {
           const intent = `https://x.com/intent/tweet`;
-          window.open(intent, '_blank', 'noopener');
+          if (pendingWindow && !pendingWindow.closed) {
+            pendingWindow.location = intent;
+          } else {
+            window.open(intent, '_blank', 'noopener');
+          }
         };
 
         const showRedirecting = () => {
@@ -1140,6 +1177,7 @@
               copyHandlesBtn.textContent = original;
               copyHandlesBtn.style.color = '';
               copyHandlesBtn.disabled = false;
+              pendingWindow = null;
             }
           }, 333);
         };
@@ -1148,6 +1186,7 @@
           if (copied) {
             showRedirecting();
           } else {
+            if (pendingWindow && !pendingWindow.closed) pendingWindow.close();
             copyHandlesBtn.textContent = original;
             copyHandlesBtn.style.color = '';
             copyHandlesBtn.disabled = false;
@@ -1155,7 +1194,8 @@
         }, 800);
       } catch {
         copyHandlesBtn.disabled = false;
-        alert('Could not copy. Try a modern browser with clipboard access or copy manually.');
+        if (pendingWindow && !pendingWindow.closed) pendingWindow.close();
+        alert('Could not copy. Try a modern browser with clipboard access or screen shot and copy text manually.');
       }
     }
 
