Add minor text change to X intent placeholder.

--- a/axa/content.html
+++ b/axa/content.html
@@ -945,7 +945,7 @@
     const CHAR_LIMIT = 280;
     const ALIGN_FONT_MIN = 11;
     const ALIGN_FONT_MAX = 18;
-    const X_INTENT_PLACEHOLDER = 'Delete this text and paste the alignment caption and grid image from A𝕏A web-page.';
+    const X_INTENT_PLACEHOLDER = 'Delete this text and paste the alignment caption and grid image copied onto your clipboard from the A𝕏A web-page.';
 
     const FONT_MAP = {
       'helvetica': '"Helvetica", "Arial", sans-serif',
